--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
   "name": "ju_notes",
   "version": "1.0.0",
-  "description": "Juching's notes",
-  "repository": "https://gitee.com/juching/ju_notes",
+  "description": "",
   "main": "index.js",
-  "author": "Juching",
-  "license": "ISC",
   "scripts": {
-    "dev": "vitepress dev .",
-    "build": "node ./scripts/build.js",
-    "serve": "vitepress serve ."
+    "docs:dev": "vuepress dev .",
+    "docs:build": "vuepress build ."
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@algolia/client-search": "^4.11.0",
-    "@types/markdown-it": "^12.2.3",
-    "@types/react": "^17.0.38",
-    "chalk": "^4.1.0",
-    "gray-matter": "^4.0.3",
-    "lodash": "^4.17.21",
-    "markdown-it": "^12.3.0",
-    "markdown-it-anchor": "^8.4.1",
-    "markdown-it-html5-media": "^0.7.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "vitepress": "^0.20.10",
-    "yorkie": "^2.0.0"
+    "@vuepress/bundler-vite": "2.0.0-beta.60",
+    "@vuepress/bundler-webpack": "2.0.0-beta.60",
+    "@vuepress/client": "2.0.0-beta.60",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.60",
+    "@vuepress/plugin-google-analytics": "2.0.0-beta.60",
+    "@vuepress/plugin-register-components": "2.0.0-beta.60",
+    "@vuepress/plugin-shiki": "2.0.0-beta.60",
+    "@vuepress/utils": "2.0.0-beta.60",
+    "vue": "^3.2.45",
+    "vuepress": "2.0.0-beta.60"
   }
 }
