--- a/code/terminal-script/shell/linux/utility/jsScritps/package.json
+++ b/code/terminal-script/shell/linux/utility/jsScritps/package.json
@@ -12,6 +12,7 @@
     "@webantic/nginx-config-parser": "^1.3.0",
     "chalk": "^4.1.0",
     "fs-extra": "^9.1.0",
+    "jsscritps": "file:",
     "yaml": "^1.10.2"
   }
 }
